--- a/download.html
+++ b/download.html
@@ -35,9 +35,8 @@
 
 
       <p style="background-color:black;color:white;">RoseClient for Bedrock OPEN BETA</p>
-      <p style="background-color:black;color:white;">Version V0.5.2 Changelog</p>
-      <p style="background-color:black;color:white;">- added Keystrokes MOD</p>
-      <p style="background-color:black;color:white;">- added Custom Menu MOD</p>
+      <p style="background-color:black;color:white;">Version V0.9 Changelog</p>
+      <p style="background-color:black;color:white;">- BugFixes </p>
       <p style="background-color:black;color:white;">- BETA IS NOW OPEN</p>
       <a href="RoseClient.mcaddon" download class="download-button">Bedrock V0.5.2</a>
       <p style="background-color:black;color:white;">   </p>
