--- a/download.html
+++ b/download.html
@@ -32,13 +32,23 @@
         <div class="box"></div>
       </div>
 
-
+    <style>
+            p {
+          text-align: center;
+          color: white;
+          font-size: 24px;
+        }
+    </style>
 
       <p style="background-color:black;color:white;">RoseClient for Bedrock OPEN BETA</p>
-      <p style="background-color:black;color:white;">Version V0.9 Changelog</p>
-      <p style="background-color:black;color:white;">- BugFixes </p>
+      <p style="background-color:black;color:white;">Version V1 Changelog</p>
+      <p style="background-color:black;color:white;">- Added Lower Fire Mod </p>
+      <p style="background-color:black;color:white;">- Added Cosmetics </p>
+      <p style="background-color:black;color:white;">- Added Free Capes (from RC and one of our partners) </p>
+      <p style="background-color:black;color:white;">- Added Pride Version Of RC Title  </p>
+      <p style="background-color:black;color:white;">- You can now choose a RoseClient Logo Theme  </p>
       <p style="background-color:black;color:white;">- BETA IS NOW OPEN</p>
-      <a href="RoseClient.mcaddon" download class="download-button">Bedrock V0.9</a>
+      <a href="RoseClientDownload/RoseClientV1.mcaddon" download class="download-button">Bedrock V1</a>
       <p style="background-color:black;color:white;">   </p>
       <p style="background-color:black;color:white;">   </p>
       <p style="background-color:black;color:white;">   </p>
