--- a/download.html
+++ b/download.html
@@ -38,6 +38,10 @@
           color: white;
           font-size: 24px;
         }
+        a {
+          text-align: center;
+          font-size: 24px;
+        }
     </style>
 
       <p style="background-color:black;color:white;">RoseClient for Bedrock OPEN BETA</p>
