--- a/socialmedia.html
+++ b/socialmedia.html
@@ -55,7 +55,7 @@
             <a href="https://www.reddit.com/r/roseclient/"><img src="assets/images/media/reddit.png" alt="reddit"></a>
           </div>
           <div class="social-media-item">
-            <a href="https://discord.gg/NkHEQJ27Qy"><img src="assets/images/media/discord.png" alt="Discord"></a>
+            <a href="https://discord.gg/XMhDtGM2Ue"><img src="assets/images/media/discord.png" alt="Discord"></a>
 
           </div>
         </div>
