--- a/download.html
+++ b/download.html
@@ -174,8 +174,8 @@ body {
       <div class="box"></div>
  
       <div class="button-container">
-        <a class="button" href="" target="_blank">Java Edition (coming soon)</a>
-        <a href="./RCVersions/Bedrock/RoseClientV1.1.zip" download class="download-button">Bedrock Edition</a>
+        <a class="button" href="https://www.mediafire.com/file/pyw9doxw5h2y5cg/RoseClientLauncher.zip/file" target="_blank">Download Launcher</a>
+        <a href="./RCVersions/Bedrock/RoseClient.mcaddon" download class="download-button">Bedrock Edition</a>
     </div>
     
 </body>
